src/test/ui/consts/issue-51559.stderr
error: any use of this value will cause an error
  --> $DIR/issue-51559.rs:4:33
   |
LL | pub const FOO: usize = unsafe { BAR as usize };
   | --------------------------------^^^^^^^^^^^^---
   |                                 |
   |                                 "pointer-to-integer cast" needs an rfc before being allowed inside constants
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to previous error

